--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -69,17 +69,17 @@ RUN npm link
 
 WORKDIR /matterbridge-example-accessory-platform
 COPY --from=builder /matterbridge-example-accessory-platform/dist ./dist
-COPY --from=builder /matterbridge-example-accessory-platform/node_modules ./node_modules
+# COPY --from=builder /matterbridge-example-accessory-platform/node_modules ./node_modules
 COPY --from=builder /matterbridge-example-accessory-platform/package.json ./package.json
 COPY --from=builder /matterbridge-example-accessory-platform/link-matterbridge-script.js ./link-matterbridge-script.js
-RUN npm link
+RUN npm -g install ./
 
 WORKDIR /matterbridge-example-dynamic-platform
 COPY --from=builder /matterbridge-example-dynamic-platform/dist ./dist
-COPY --from=builder /matterbridge-example-dynamic-platform/node_modules ./node_modules
+# COPY --from=builder /matterbridge-example-dynamic-platform/node_modules ./node_modules
 COPY --from=builder /matterbridge-example-dynamic-platform/package.json ./package.json
 COPY --from=builder /matterbridge-example-dynamic-platform/link-matterbridge-script.js ./link-matterbridge-script.js
-RUN npm link
+RUN npm -g install ./
 
 WORKDIR /matterbridge-zigbee2mqtt
 COPY --from=builder /matterbridge-zigbee2mqtt/dist ./dist
