--- a/.github/workflows/docker-buildx-main.yml
+++ b/.github/workflows/docker-buildx-main.yml
@@ -15,7 +15,7 @@ jobs:
 
     - uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: '20.x'
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -32,6 +32,16 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         version: latest
+
+    - name: Extract version from package.json
+      id: extract_version
+      run: |
+        VERSION=$(jq -r '.version' package.json)
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+    - name: Echo main version ${{ env.VERSION }}
+      run: |
+        echo "Extracted version is: $VERSION ${{ env.VERSION }}"
 
     - name: Run Docker Buildx on latest 
       run: |
