--- a/docker/Dockerfile.shelly
+++ b/docker/Dockerfile.shelly
@@ -1,4 +1,5 @@
-FROM alpine:3.18.4 AS base
+# FROM alpine:3.18.4 AS base
+FROM alpine:latest AS base
 # FROM alpine:latest as base not working
 # FROM node:20-alpine as base not working
 
