--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.4.3-beta2",
+  "version": "1.4.3-beta4",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -124,15 +124,17 @@
   },
   "dependencies": {
     "@project-chip/matter-node.js": "0.9.4",
+    "archiver": "7.0.1",
     "express": "4.19.2",
     "https": "1.0.0",
     "matter-history": "1.1.6",
-    "node-ansi-logger": "2.0.8",
+    "node-ansi-logger": "3.0.0",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.0"
   },
   "devDependencies": {
     "@eslint/js": "9.9.0",
+    "@types/archiver": "6.0.2",
     "@types/eslint__js": "8.42.3",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
