--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "1.4.3-beta4",
+  "version": "1.4.3",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -127,7 +127,7 @@
     "archiver": "7.0.1",
     "express": "4.19.2",
     "https": "1.0.0",
-    "matter-history": "1.1.6",
+    "matter-history": "1.1.7",
     "node-ansi-logger": "3.0.0",
     "node-persist-manager": "1.0.8",
     "ws": "8.18.0"
@@ -138,7 +138,7 @@
     "@types/eslint__js": "8.42.3",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
-    "@types/node": "22.4.2",
+    "@types/node": "22.5.0",
     "@types/ws": "8.5.12",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jest": "28.8.0",
