--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -1,4 +1,4 @@
-name: Build dev and Push Docker image dev, dev_alpine  and dev_shelly to Docker Hub with buildx
+name: Build dev and Push Docker image dev, dev_alpine and dev_shelly_alpine to Docker Hub with buildx
 
 on:
   push:
@@ -43,7 +43,7 @@ jobs:
       run: |
         echo "Extracted version is: $VERSION ${{ env.VERSION }}"
   
-    - name: Run Docker Buildx on dev_shelly
+    - name: Run Docker Buildx on dev_shelly_alpine
       run: |
         docker buildx build \
           --platform linux/arm64 \
